--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         </div>
                         <div class="info-image col-md">
                             <div class="info-image__block">
-                                <img src="/img/inform/inform_1.png" class="info-image__item img-fluid" title="info image" alt="phones info-image">
+                                <img src="./img/inform/inform_1.png" class="info-image__item img-fluid" title="info image" alt="phones info-image">
                             </div>
                         </div>
                     </div>
@@ -100,7 +100,7 @@
                                 product overview
                             </h5>
                             <h2 class="h2-overview">List of amazing features</h2>
-                            <img class="border-dashed over-item__border" src="/img/border-dashed.png" alt="dashed-border.img" title="border-dashed">
+                            <img class="border-dashed over-item__border" src="./img/border-dashed.png" alt="dashed-border.img" title="border-dashed">
                         </div>
                         <div class="over-row row">
                             <div class="over-block col-lg-3 col-sm-6 col-xs">
@@ -119,7 +119,7 @@
                             <div class="over-block col-lg-3 col-sm-6 col-xs">
                                 <div class="over-item">
                                     <div class="over-item__image">
-                                        <img src="/img/overview/overview_2.png" class=" over-item__image__item img-fluid" title="over-2" alt="over_2">
+                                        <img src="./img/overview/overview_2.png" class=" over-item__image__item img-fluid" title="over-2" alt="over_2">
                                     </div>
                                     <h4 class="over-item__heading">
                                         Customizable
@@ -132,7 +132,7 @@
                             <div class="over-block col-lg-3 col-sm-6 col-xs">
                                 <div class="over-item">
                                     <div class="over-item__image">
-                                        <img src="/img/overview/overview_3.png" class=" over-item__image__item img-fluid" title="over-3" alt="over_3">
+                                        <img src="./img/overview/overview_3.png" class=" over-item__image__item img-fluid" title="over-3" alt="over_3">
                                     </div>
                                     <h4 class="over-item__heading">
                                         Lovely design
@@ -145,7 +145,7 @@
                             <div class="over-block col-lg-3 col-sm-6 col-xs">
                                 <div class="over-item">
                                     <div class="over-item__image">
-                                        <img src="/img/overview/overview_4.png" class=" over-item__image__item img-fluid" title="over-4" alt="over_4">
+                                        <img src="./img/overview/overview_4.png" class=" over-item__image__item img-fluid" title="over-4" alt="over_4">
                                     </div>
                                     <h4 class="over-item__heading">
                                         Mobile Friendly
@@ -167,7 +167,7 @@
                         <div class="detail-row row">
                                 <div class="detail-image col-md-6">
                                     <div class="info-image__block detail-image__block">
-                                        <img src="/img/detail/detail_1.png" class="image-poster__item detail-image__item img-fluid" title="info image" alt="phones info-image">
+                                        <img src="./img/detail/detail_1.png" class="image-poster__item detail-image__item img-fluid" title="info image" alt="phones info-image">
                                     </div>
                                 </div>
                             <div class="offset-md-1 offset-lg-0"></div>
@@ -177,7 +177,7 @@
                                         dip into the details
                                     </h5>
                                     <h2 class="h2-details">Beautiful on every device</h2>
-                                    <img class="border-dashed" src="/img/border-dashed.png" alt="dashed-border.img" title="border-dashed">
+                                    <img class="border-dashed" src="./img/border-dashed.png" alt="dashed-border.img" title="border-dashed">
                                 </div>
                                 <div class="detail-info-cont">
                                     <p class="details-info__about">
@@ -207,7 +207,7 @@
                                         dip into the details
                                     </h5>
                                     <h2 class="h2-customise">Super easy to customize</h2>
-                                    <img class="border-dashed" src="/img/border-dashed.png" alt="dashed-border.img" title="border-dashed">
+                                    <img class="border-dashed" src="./img/border-dashed.png" alt="dashed-border.img" title="border-dashed">
                                     <p class="customise-info__about">
                                         Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non &#8239;&#8288;&#8239;mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu
                                         ad litora torquent per conubia nostra, per inceptos himenaeos.
@@ -217,7 +217,7 @@
                             <div class="customise-img col-md-7">
                                 <div class="customise-image col-md">
                                     <div class="customise-image__block info-image__block">
-                                        <img src="/img/customise/customise_1.png" class="customise-image__item img-fluid" title="info image" alt="phones info-image">
+                                        <img src="./img/customise/customise_1.png" class="customise-image__item img-fluid" title="info image" alt="phones info-image">
                                     </div>
                                 </div>
                             </div>
@@ -237,7 +237,7 @@
                                     quality has its price
                                 </h5>
                                 <h2 class="h2-overview h2-feed">Pricings & Plans</h2>
-                                <img class="border-dashed feed-item__border" src="/img/border-dashed.png" alt="dashed-border.img" title="border-dashed">
+                                <img class="border-dashed feed-item__border" src="./img/border-dashed.png" alt="dashed-border.img" title="border-dashed">
                             </div>
                         </div>
                         <div class="feed-comments col">
@@ -260,7 +260,7 @@
                                                     <div class="feed-carousel-item__author">
                                                         <div class="feed-carousel-item__author__row row">
                                                             <div class="feed-carousel-item__author__image">
-                                                                <img src="/img/feedback/feedback_person_3.png" class="feed-carousel-item__author_image__item img-fluid " alt="auth1 ">
+                                                                <img src="./img/feedback/feedback_person_3.png" class="feed-carousel-item__author_image__item img-fluid " alt="auth1 ">
                                                             </div>
                                                                 <div class="feed-carousel-item__author_pos-img ">
                                                                     <h6 class="feed-carousel-item__author__name ">
@@ -286,7 +286,7 @@
                                                         <div class="feed-carousel-item__author ">
                                                             <div class="feed-carousel-item__author__row row ">
                                                                 <div class="feed-carousel-item__author__image ">
-                                                                    <img src="/img/feedback/feedback_person_4.png " class="feed-carousel-item__author_image__item " img-fluid" alt="auth1">
+                                                                    <img src="./img/feedback/feedback_person_4.png " class="feed-carousel-item__author_image__item " img-fluid" alt="auth1">
                                                             </div>
                                                             <div class="feed-carousel-item__author_pos-img">
                                                                 <h6 class="feed-carousel-item__author__name">
@@ -314,7 +314,7 @@
                                                     <div class="feed-carousel-item__author">
                                                         <div class="feed-carousel-item__author__row row">
                                                             <div class="feed-carousel-item__author__image">
-                                                                <img src="/img/feedback/feedback_person_5.png" class="feed-carousel-item__author_image__item" img-fluid " alt="auth1 ">
+                                                                <img src="./img/feedback/feedback_person_5.png" class="feed-carousel-item__author_image__item" img-fluid " alt="auth1 ">
                                                                 </div>
                                                                 <div class="feed-carousel-item__author_pos-img ">
                                                                     <h6 class="feed-carousel-item__author__name ">
@@ -340,7 +340,7 @@
                                                         <div class="feed-carousel-item__author ">
                                                             <div class="feed-carousel-item__author__row row ">
                                                                 <div class="feed-carousel-item__author__image ">
-                                                                    <img src="/img/feedback/feedback_person_6.png " class="feed-carousel-item__author_image__item " img-fluid" alt="auth1">
+                                                                    <img src="./img/feedback/feedback_person_6.png " class="feed-carousel-item__author_image__item " img-fluid" alt="auth1">
                                                             </div>
                                                             <div class="feed-carousel-item__author_pos-img">
                                                                 <h6 class="feed-carousel-item__author__name">
@@ -368,7 +368,7 @@
                                                     <div class="feed-carousel-item__author">
                                                         <div class="feed-carousel-item__author__row row">
                                                             <div class="feed-carousel-item__author__image">
-                                                                <img src="/img/feedback/feedback_person_1.png" class="feed-carousel-item__author_image__item" img-fluid " alt="auth1 ">
+                                                                <img src="./img/feedback/feedback_person_1.png" class="feed-carousel-item__author_image__item" img-fluid " alt="auth1 ">
                                                                 </div>
                                                                 <div class="feed-carousel-item__author_pos-img ">
                                                                     <h6 class="feed-carousel-item__author__name ">
@@ -394,7 +394,7 @@
                                                         <div class="feed-carousel-item__author ">
                                                             <div class="feed-carousel-item__author__row row ">
                                                                 <div class="feed-carousel-item__author__image ">
-                                                                    <img src="/img/feedback/feedback_person_2.png " class="feed-carousel-item__author_image__item " img-fluid" alt="auth1">
+                                                                    <img src="./img/feedback/feedback_person_2.png " class="feed-carousel-item__author_image__item " img-fluid" alt="auth1">
                                                             </div>
                                                             <div class="feed-carousel-item__author_pos-img">
                                                                 <h6 class="feed-carousel-item__author__name">
@@ -422,7 +422,7 @@
                                                     <div class="feed-carousel-item__author">
                                                         <div class="feed-carousel-item__author__row row">
                                                             <div class="feed-carousel-item__author__image">
-                                                                <img src="/img/feedback/feedback_person_7.png" class="feed-carousel-item__author_image__item" img-fluid " alt="auth1 ">
+                                                                <img src="./img/feedback/feedback_person_7.png" class="feed-carousel-item__author_image__item" img-fluid " alt="auth1 ">
                                                                 </div>
                                                                 <div class="feed-carousel-item__author_pos-img ">
                                                                     <h6 class="feed-carousel-item__author__name ">
@@ -448,7 +448,7 @@
                                                         <div class="feed-carousel-item__author ">
                                                             <div class="feed-carousel-item__author__row row ">
                                                                 <div class="feed-carousel-item__author__image ">
-                                                                    <img src="/img/feedback/feedback_person_8.png " class="feed-carousel-item__author_image__item " img-fluid" alt="auth1">
+                                                                    <img src="./img/feedback/feedback_person_8.png " class="feed-carousel-item__author_image__item " img-fluid" alt="auth1">
                                                             </div>
                                                             <div class="feed-carousel-item__author_pos-img">
                                                                 <h6 class="feed-carousel-item__author__name">
@@ -496,7 +496,7 @@
                                 quality has its price
                             </h5>
                             <h2 class="h2-pricing h2-overview h2-feed">Pricings & Plans</h2>
-                            <img class="border-dashed" src="/img/border-dashed.png" alt="dashed-border.img" title="border-dashed">
+                            <img class="border-dashed" src="./img/border-dashed.png" alt="dashed-border.img" title="border-dashed">
                         </div>
                     </div>
                     <div class="pricing-table__row row">
@@ -581,7 +581,7 @@
                                 stay in touch
                             </h5>
                             <h2 class="h2-cont h2-feed">Contact us</h2>
-                            <img class="border-dashed feed-item__border" src="/img/border-dashed.png" alt="dashed-border.img" title="border-dashed">
+                            <img class="border-dashed feed-item__border" src="./img/border-dashed.png" alt="dashed-border.img" title="border-dashed">
                         </div>
                     </div>
                     <div class="contacts-tar row">
@@ -589,7 +589,7 @@
                         <div class="contacts-item col-xl-2 col-md-3 col-sm-6">
                             <div class="contacts-item__tel">
                                 <div class="contacts-item__tel__img">
-                                    <img src="/img/contact/contact_1.png" class="img-fluid" title="contacts_1" alt="contacts_1">
+                                    <img src="./img/contact/contact_1.png" class="img-fluid" title="contacts_1" alt="contacts_1">
                                 </div>
                                 <div class="contacts-item__tel__text">
                                     <p class="contacts-item__text__item _tel">Phone: (415) 124-5678</p>
@@ -601,7 +601,7 @@
                         <div class="contacts-item col-lg-2 col-md-4 col-sm-6">
                             <div class="contacts-item__geo">
                                 <div class="contacts-item__geo__img">
-                                    <img src="/img/contact/contact_2.png" class="img-fluid" title="contacts_2" alt="contacts_2">
+                                    <img src="./img/contact/contact_2.png" class="img-fluid" title="contacts_2" alt="contacts_2">
                                 </div>
                                 <div class="contacts-item__geo__text">
                                     <p class="contacts-item__text__item _geo">1001 Brickell Bay Dr.</p>
@@ -614,7 +614,7 @@
                         <div class="contacts-item col-xl-4 col-md-3">
                             <div class="contacts-item__mail">
                                 <div class="contacts-item__mail__img">
-                                    <img src="/img/contact/contact_3.png" class="img-fluid" title="contacts_3" alt="contacts_3">
+                                    <img src="./img/contact/contact_3.png" class="img-fluid" title="contacts_3" alt="contacts_3">
                                 </div>
                                 <div class="contacts-item__mail__text">
                                     <p class="contacts-item__text__item _mail">support@yourname.com</p>
